--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
+    "marked": "^13.0.1",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "pizzip": "^3.1.7",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20",
     "@types/pizzip": "^3.0.5",
     "@types/react": "^18",
